<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="clickListener"
            type="com.mastercode.calculatorapp.ClickListener" />
    </data>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="4"
        android:rowCount="6"
        android:padding="25dp"
        android:background="#010100"
        android:layout_gravity="center">

        <!-- Display TextView -->
        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="239dp"
            android:scrollbars="none"
            android:layout_columnSpan="4">
            <TextView
                android:id="@+id/displayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textColor="#fafafa"
                android:textSize="75sp"
                android:layout_gravity="bottom|end"
                android:maxLines="1"
                android:background="@drawable/screen_cursor_background"
                />
        </HorizontalScrollView>

        <!-- Row 1 -->
        <Button
            android:onClick="@{clickListener::allClearClicked}"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_width="0dp"
            android:textSize="25sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_columnWeight="1"
            android:background="@drawable/grey_btn_bg"
            android:textColor="#0b0a0b"
            android:text="@string/a_c" />

        <Button
            android:onClick="@{clickListener::changeSignClicked}"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_width="0dp"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/grey_btn_bg"
            android:textColor="#0b0a0b"
            android:text="@string/change_sign" />

        <Button
            android:onClick="@{clickListener::percentageSignClicked}"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_width="0dp"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/grey_btn_bg"
            android:textColor="#0b0a0b"
            android:text="@string/percentage_text" />

        <Button
            android:onClick="@{clickListener::divisionSignClicked}"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_width="0dp"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/operator_btn_bg"
            android:textColor="#fafafa"
            android:text="@string/divide" />

        <!-- Row 2 -->
        <Button
            android:onClick="@{clickListener::updateDisplayText}"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_width="0dp"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/num_btn_shape"
            android:textColor="#fafafa"
            android:text="@string/_7" />

        <Button
            android:onClick="@{clickListener::updateDisplayText}"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_width="0dp"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/num_btn_shape"
            android:textColor="#fafafa"
            android:text="@string/_8" />

        <Button
            android:onClick="@{clickListener::updateDisplayText}"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_width="0dp"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/num_btn_shape"
            android:textColor="#fafafa"
            android:text="@string/_9" />

        <Button
            android:onClick="@{clickListener::multiplicationSignClicked}"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_width="0dp"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/operator_btn_bg"
            android:textColor="#fafafa"
            android:text="@string/multiply" />

        <!-- Row 3 -->
        <Button
            android:onClick="@{clickListener::updateDisplayText}"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_width="0dp"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/num_btn_shape"
            android:textColor="#fafafa"
            android:text="@string/_4" />

        <Button
            android:onClick="@{clickListener::updateDisplayText}"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_width="0dp"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/num_btn_shape"
            android:textColor="#fafafa"
            android:text="@string/_5"/>

        <Button
            android:onClick="@{clickListener::updateDisplayText}"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_width="0dp"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/num_btn_shape"
            android:textColor="#fafafa"
            android:text="@string/_6" />

        <Button
            android:onClick="@{clickListener::subtractionSignClicked}"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_width="0dp"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/operator_btn_bg"
            android:textColor="#fafafa"
            android:text="@string/subtract" />

        <!-- Row 3 -->
        <Button
            android:id="@+id/button1"
            android:onClick="@{clickListener::updateDisplayText}"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_width="0dp"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/num_btn_shape"
            android:textColor="#fafafa"
            android:text="@string/_1" />

        <Button
            android:onClick="@{clickListener::updateDisplayText}"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_width="0dp"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/num_btn_shape"
            android:textColor="#fafafa"
            android:text="@string/_2" />

        <Button
            android:onClick="@{clickListener::updateDisplayText}"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_width="0dp"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/num_btn_shape"
            android:textColor="#fafafa"
            android:text="@string/_3" />

        <Button
            android:onClick="@{clickListener::additionSignClicked}"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_width="0dp"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/operator_btn_bg"
            android:textColor="#fafafa"
            android:text="@string/add" />

        <!-- Row 3 -->
        <Button
            android:onClick="@{clickListener::updateDisplayText}"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_width="0dp"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/num_btn_shape"
            android:textColor="#fafafa"
            android:text="@string/_0" />


        <Button
            android:onClick="@{clickListener::decimalClicked}"
            android:layout_row="5"
            android:layout_column="2"
            android:layout_width="0dp"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/num_btn_shape"
            android:textColor="#fafafa"
            android:text="@string/decimal" />

        <Button
            android:onClick="@{clickListener::equalSignClicked}"
            android:layout_row="5"
            android:layout_column="3"
            android:layout_width="0dp"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/operator_btn_bg"
            android:textColor="#fafafa"
            android:text="@string/equal" />

    </GridLayout>

</layout>